--- a/sandiegodata.org/places/meta/documentation.html
+++ b/sandiegodata.org/places/meta/documentation.html
@@ -4,5 +4,17 @@
 </head>
 <body>
 <h1>San Diego County Places</h1>
+<p>This bundle includes a partition that holds the names and boundaries for San Diego County cities, and within the City of San Diego, council districts, neighborhoods and communities. </p>
+<p>It also includes two crosswalks, linking all of the geometries to blockgroups and tracts. Since some of the blockgroups and tracts cross boundaries, a collectio of blockgroups or tracts associated with a geometry will not have the same boundary as the geometry. However, the blockgroups and tracts that cross boundaries are primaryily large with low populations, so this problem has a larger effect on area than for population. </p>
+<p>The mismatch between San Diego communities and  blocks and tracts is particularly poor for the communities of:</p>
+<ul>
+<li>San Pasqual</li>
+<li>Black Mountain Ranch</li>
+<li>Del Mar Mesa</li>
+<li>Fairbanks Ranch County Club</li>
+<li>Villa De La Valle</li>
+<li>Mira Mar Ranch North</li>
+<li>East Elliot</li>
+</ul>
 </body>
 </html>
