--- a/sandiegohungercoalition.org/agencies/meta/documentation.html
+++ b/sandiegohungercoalition.org/agencies/meta/documentation.html
@@ -3,7 +3,7 @@
     <title>Bundle Documentation</title>
 </head>
 <body>
-<h1>None</h1>
-<p>None</p>
+<h1>Food Agency Locations</h1>
+<p>This is an incomplete geocoding of a subset of a list of food agencies provided by the San Diego Food System Alliance</p>
 </body>
 </html>
