--- a/sdfsa.org/agencies/meta/documentation.html
+++ b/sdfsa.org/agencies/meta/documentation.html
@@ -12,7 +12,7 @@
 <p><code>sandiegohungercoalition.org-agencies-agency_list</code>  is a subset of the organizations references in the <a href="http://ds.civicknowledge.org/sandiegohungercoalition.org/Agency%20Matrix.xlsx">SDFSA Master Agency Matrix spreadsheet</a>. It enumerates the agencies in the list and assigns <code>site_id</code> values to the different locations. </p>
 </li>
 <li>
-<p><code>sandiegohungercoalition.org-agencies-sdfb_partners</code>  has a direct import of  a list of agencies that are partners of the San Diego Food Bank. THis list may be different than in <code>agency_list</code></p>
+<p><code>sandiegohungercoalition.org-agencies-sdfb_partners</code>  has a direct import of  a list of agencies that are partners of the San Diego Food Bank. This list may be different than in <code>agency_list</code></p>
 </li>
 <li>
 <p><code>sandiegohungercoalition.org-agencies-locations</code> geocodes all of the addresses in the <code>agency_list</code> and <code>sdfb_partners</code> files</p>
